--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/x-data-grid": "^5.13.1",
     "@mui/x-date-pickers": "^5.0.0-beta.1",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
+    "faker": "^6.6.6",
     "framer-motion": "^6.5.1",
     "react": "^17.0.0",
     "react-chartjs-2": "^4.3.1",
