--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16",
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   }
 }
