--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   }
